add docker test environment